--- a/src/styles.css
+++ b/src/styles.css
@@ -129,7 +129,7 @@ ol {
 
 .form-36-mian {
   background-size: cover;
-  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.85), rgba(255, 255, 255, 0)), url( assets/images/MuCangChai.jpg);
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.85), rgba(255, 255, 255, 0)), url( assets/images/ChungCu.jpg);
   background-attachment: fixed;
   min-height: 100vh;
   display: grid;
