--- a/src/app/admin/manage-canho/canho/add-cudan/add-cudan.component.html
+++ b/src/app/admin/manage-canho/canho/add-cudan/add-cudan.component.html
@@ -204,7 +204,8 @@
         <p>
           <mat-form-field appearance="standard">
             <mat-label>Họ tên</mat-label>
-            <input matInput placeholder="Vui lòng nhập họ tên" [formControlName]="'hoTen'" required>
+            <input matInput placeholder="Vui lòng nhập họ tên" [formControlName]="'hoTen'" [readonly]="readonly"
+              required>
             <mat-icon [ngClass]="{'red-icon': !cuDanEditForm.get('hoTen').valid && cuDanEditForm.get('hoTen').touched}"
               matSuffix>account_circle
             </mat-icon>
@@ -260,7 +261,8 @@
         <p>
           <mat-form-field appearance="standard">
             <mat-label>Ngày sinh</mat-label>
-            <input type="text" matInput placeholder="Vui lòng nhập ngày sinh" [formControlName]="'ngaySinh'" required>
+            <input type="text" [readonly]="readonly" matInput placeholder="Vui lòng nhập ngày sinh"
+              [formControlName]="'ngaySinh'" required>
             <mat-icon
               [ngClass]="{'red-icon': !cuDanEditForm.get('ngaySinh').valid && cuDanEditForm.get('ngaySinh').touched}"
               matSuffix>date_range
@@ -273,7 +275,8 @@
         <p>
           <mat-form-field appearance="standard">
             <mat-label>Số CCCD</mat-label>
-            <input type="text" matInput placeholder="Vui lòng nhập ngày sinh" [formControlName]="'soCCCD'" required>
+            <input type="text" [readonly]="readonly" matInput placeholder="Vui lòng nhập ngày sinh"
+              [formControlName]="'soCCCD'" required>
             <mat-icon
               [ngClass]="{'red-icon': !cuDanEditForm.get('soCCCD').valid && cuDanEditForm.get('soCCCD').touched}"
               matSuffix>people
