--- a/src/app/admin/manage-canho/canho/detail-canho/detail-canho.component.html
+++ b/src/app/admin/manage-canho/canho/detail-canho/detail-canho.component.html
@@ -22,7 +22,8 @@
               <mat-label>Tìm kiếm</mat-label>
               <input matInput (keyup)="applyFilterCuDan($event)" placeholder="Nhập mục cần tìm..." #input>
             </mat-form-field>
-            <table mat-table [dataSource]="cuDanList" multiTemplateDataRows class="mat-elevation-z8" matSort>
+            <table mat-table [dataSource]="cuDanList" #TableSort="matSort" multiTemplateDataRows
+              class="mat-elevation-z8" matSort>
 
               <ng-container matColumnDef="id">
                 <th mat-header-cell *matHeaderCellDef> </th>
@@ -93,7 +94,7 @@
 
           </nb-card-body>
           <nb-card-footer>
-            <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+            <mat-paginator #TablePaginator="matPaginator" [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
           </nb-card-footer>
         </nb-card>
       </div>
@@ -188,7 +189,8 @@
                   <mat-label>Tìm kiếm</mat-label>
                   <input matInput (keyup)="applyFilterDichVu($event)" placeholder="Nhập dịch vụ cần tìm..." #input>
                 </mat-form-field>
-                <table mat-table [dataSource]="dichVuList" multiTemplateDataRows class="mat-elevation-z8" matSort>
+                <table mat-table [dataSource]="dichVuList" multiTemplateDataRows #TableOneSort="matSort"
+                  class="mat-elevation-z8" matSort>
                   <ng-container matColumnDef="id">
                     <th mat-header-cell *matHeaderCellDef> </th>
                     <td mat-cell *matCellDef="let row">
@@ -261,7 +263,7 @@
                   </tr>
                   <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
                 </table>
-                <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]">
+                <mat-paginator #TableOnePaginator="matPaginator" [pageSizeOptions]="[5, 10, 25, 100]">
                 </mat-paginator>
               </nb-card-body>
               <nb-card-footer>
@@ -277,34 +279,84 @@
               <nb-card-body>
                 <mat-form-field>
                   <mat-label>Tìm kiếm</mat-label>
-                  <input matInput (keyup)="applyFilterDichVu($event)" placeholder="Nhập dịch vụ cần tìm..." #input>
+                  <input matInput (keyup)="applyFilterDichVuKhac($event)" placeholder="Nhập dịch vụ cần tìm..." #input>
                 </mat-form-field>
-                <table class="table">
-                  <thead>
-                    <tr>
-                      <th>STT</th>
-                      <th>Trạng thái</th>
-                      <th>Thời gian</th>
-                      <th>Action</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr>
-                      <td scope="row">2</td>
-                      <td>Chưa thanh toán</td>
-                      <td>08/2021</td>
-                      <td><button mat-button>Chi tiết</button></td>
-                    </tr>
-                    <tr>
-                      <td scope="row">1</td>
-                      <td>Đã thanh toán</td>
-                      <td>07/2021</td>
-                      <td><button mat-button color="primary">Chi tiết</button>
-                      </td>
-                    </tr>
+                <table mat-table [dataSource]="dichVuKhacList" multiTemplateDataRows #TableTwoSort="matSort"
+                  class="mat-elevation-z8" matSort>
+                  <ng-container matColumnDef="id">
+                    <th mat-header-cell *matHeaderCellDef> </th>
+                    <td mat-cell *matCellDef="let row">
+                      <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+                        <mat-icon>more_vert</mat-icon>
+                      </button>
+                      <mat-menu #menu="matMenu">
+                        <button (click)="openDetailDichVu(row)" mat-menu-item>
+                          <mat-icon>edit</mat-icon>
+                          <span>Chi tiết</span>
+                        </button>
 
-                  </tbody>
+                      </mat-menu>
+                    </td>
+                  </ng-container>
+                  <ng-container matColumnDef="stt">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+                    <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+                  </ng-container>
+                  <ng-container matColumnDef="ngayTao">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Ngày tạo </th>
+                    <td mat-cell *matCellDef="let element">
+                      {{this.convertDateToTimeStamp(element.ngayTao) | date:"longDate"}}
+                    </td>
+                  </ng-container>
+                  <ng-container matColumnDef="trangThai">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Trạng Thái </th>
+                    <td mat-cell *matCellDef="let element">
+                      <button *ngIf="element.trangThai == false && role == 'Admin'" mat-icon-button color="primary"
+                        (click)="openAddDichVu(element.id)">
+                        Thanh toán
+                      </button>
+
+                      {{element.trangThai ? "Đã thanh toán" : role == 'User' ? "Chưa thanh toán": ""}}
+                    </td>
+                  </ng-container>
+                  <ng-container matColumnDef="expandedDetail">
+                    <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplayDichVu.length">
+                      <div class="example-element-detail"
+                        [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'"
+                        *ngIf="element.trangThai == true">
+                        <div class="example-element-description">
+                          <span *ngIf="element.tenNguoiThanhToan != null"
+                            class="example-element-description-attribution">Người
+                            thanh toán:
+                          </span>{{element.tenNguoiThanhToan}}
+                          <span *ngIf="element.soDienThoai != null" class="example-element-description-attribution">Số
+                            điện
+                            thoại:
+                          </span>{{element.soDienThoai}}
+                          <span *ngIf="element.loaiHinhThanhToan != null"
+                            class="example-element-description-attribution">Loại
+                            hình thanh toán
+                          </span>{{element.loaiHinhThanhToan}}
+                          <span *ngIf="element.ngayThanhToan[0] != null"
+                            class="example-element-description-attribution">Ngày
+                            thanh
+                            toán: </span>{{convertDateToTimeStamp(element.ngayThanhToan) | date}}
+                        </div>
+                      </div>
+                    </td>
+                  </ng-container>
+                  <tr mat-header-row *matHeaderRowDef="columnsToDisplayDichVu"></tr>
+                  <tr mat-row *matRowDef="let element; columns: columnsToDisplayDichVu;" class="example-element-row"
+                    [class.example-expanded-row]="expandedElement === element"
+                    (click)="expandedElement = expandedElement === element ? null : element">
+                  </tr>
+                  <tr class="mat-row" *matNoDataRow>
+                    <td class="mat-cell" colspan="4">Không có dữ liệu: "{{input.value}}"</td>
+                  </tr>
+                  <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
                 </table>
+                <mat-paginator #TableTwoPaginator="matPaginator" [pageSizeOptions]="[5, 10, 25, 100]">
+                </mat-paginator>
               </nb-card-body>
               <nb-card-footer>
                 Dịch vụ cố định
