--- a/src/app/admin/manage-post/post/post.component.html
+++ b/src/app/admin/manage-post/post/post.component.html
@@ -2,16 +2,15 @@
   <ol class="breadcrumb">
     <mat-icon type="button" aria-hidden="false" routerLink="/admin/" aria-label="Example home icon">home</mat-icon>
     <li class="breadcrumb-item"><a routerLink="/admin/">Trang chủ</a></li>
-    <li class="breadcrumb-item"><a routerLink="/admin/manage-post">Loại bài viết</a></li>
-    <li class="breadcrumb-item active" aria-current="page">Bài viết</li>
+    <li class="breadcrumb-item active" aria-current="page">Thông báo</li>
   </ol>
 </nav>
 <nb-card>
   <nb-card-header>
-    Quản lý bài viết
+    Quản lý thông báo
   </nb-card-header>
   <nb-card-body>
-    <button (click)="addPost()" mat-flat-button color="primary">Thêm bài viết</button><br/><br/>
+    <button (click)="addPost()" mat-flat-button color="primary">Thêm bài viết</button><br /><br />
     <mat-form-field>
       <mat-label>Tìm kiếm</mat-label>
       <input matInput (keyup)="applyFilter($event)" placeholder="Nhập mục cần tìm..." #input>
@@ -20,21 +19,21 @@
       <table mat-table [dataSource]="dataSource" matSort>
 
         <ng-container matColumnDef="id">
-          <th mat-header-cell *matHeaderCellDef > </th>
+          <th mat-header-cell *matHeaderCellDef> </th>
           <td mat-cell *matCellDef="let row">
             <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
               <mat-icon>more_vert</mat-icon>
             </button>
             <mat-menu #menu="matMenu">
-              <button (click)="detailPost(row.id)" mat-menu-item>
+              <!-- <button (click)="detailPost(row.id)" mat-menu-item>
                 <mat-icon>Detail</mat-icon>
                 <span>Chi tiết</span>
-              </button>
-              <button (click)="editPost(row.id)" mat-menu-item>
+              </button> -->
+              <button (click)="editPost(row)" mat-menu-item>
                 <mat-icon>edit</mat-icon>
                 <span>Sửa</span>
               </button>
-              <button  (click)="deletePost(row.id)" mat-menu-item>
+              <button (click)="deletePost(row.id)" mat-menu-item>
                 <mat-icon>delete</mat-icon>
                 <span>Xóa</span>
               </button>
@@ -42,24 +41,20 @@
           </td>
         </ng-container>
 
-        <ng-container matColumnDef="title">
+        <ng-container matColumnDef="tieuDe">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Tiêu đề </th>
-          <td mat-cell *matCellDef="let row"> {{row.title}} </td>
+          <td mat-cell *matCellDef="let row"> {{row.tieuDe}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="createDate">
+        <ng-container matColumnDef="ngayTao">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Ngày đăng </th>
-          <td mat-cell *matCellDef="let row"> {{row.createDate| date:'HH:mm:ss dd/MM/yyyy'}} </td>
+          <td mat-cell *matCellDef="let row"> {{this.convertDateToTimeStamp(row.ngayTao)| date:'dd/MM/yyyy'}}
+          </td>
         </ng-container>
 
-        <ng-container matColumnDef="typePostName">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Loại bài viết </th>
-          <td mat-cell *matCellDef="let row" > {{row.typePostName}} </td>
-        </ng-container>
-
-         <ng-container matColumnDef="userName">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Người đăng </th>
-          <td mat-cell *matCellDef="let row" > {{row.userName}} </td>
+        <ng-container matColumnDef="noiDung">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Nội dung </th>
+          <td mat-cell *matCellDef="let row"> {{row.noiDung}} </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
