--- a/src/app/admin/manage-post/type-post/type-post.component.html
+++ b/src/app/admin/manage-post/type-post/type-post.component.html
@@ -2,45 +2,73 @@
   <ol class="breadcrumb">
     <mat-icon type="button" aria-hidden="false" routerLink="/admin/" aria-label="Example home icon">home</mat-icon>
     <li class="breadcrumb-item"><a routerLink="/admin/">Trang chủ</a></li>
-    <li class="breadcrumb-item active" aria-current="page">Loại bài viết</li>
+    <li class="breadcrumb-item active" aria-current="page">Thông báo riêng</li>
   </ol>
 </nav>
 <nb-card>
   <nb-card-header>
-    Quản lý loại bài viết
+    Quản lý thông báo riêng
   </nb-card-header>
   <nb-card-body>
-    <div class="example-button-container">
-      <button *ngIf="auth" (click)="addTypePost()" mat-flat-button color="primary">Thêm loại bài viết</button>
+    <button (click)="addPost()" mat-flat-button color="primary">Thêm thông báo</button><br /><br />
+    <mat-form-field>
+      <mat-label>Tìm kiếm</mat-label>
+      <input matInput (keyup)="applyFilter($event)" placeholder="Nhập mục cần tìm..." #input>
+    </mat-form-field>
+    <div class="mat-elevation-z8">
+      <table mat-table [dataSource]="dataSource" matSort>
 
+        <ng-container matColumnDef="id">
+          <th mat-header-cell *matHeaderCellDef> </th>
+          <td mat-cell *matCellDef="let row">
+            <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+              <mat-icon>more_vert</mat-icon>
+            </button>
+            <mat-menu #menu="matMenu">
+              <!-- <button (click)="detailPost(row.id)" mat-menu-item>
+                <mat-icon>Detail</mat-icon>
+                <span>Chi tiết</span>
+              </button> -->
+              <button (click)="editPost(row)" mat-menu-item>
+                <mat-icon>edit</mat-icon>
+                <span>Sửa</span>
+              </button>
+              <button (click)="deletePost(row.id)" mat-menu-item>
+                <mat-icon>delete</mat-icon>
+                <span>Xóa</span>
+              </button>
+            </mat-menu>
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="tieuDe">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Tiêu đề </th>
+          <td mat-cell *matCellDef="let row"> {{row.tieuDe}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="ngayTao">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Ngày đăng </th>
+          <td mat-cell *matCellDef="let row"> {{this.convertDateToTimeStamp(row.ngayTao)| date:'dd/MM/yyyy'}}
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="noiDung">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Nội dung </th>
+          <td mat-cell *matCellDef="let row"> {{row.noiDung}} </td>
+        </ng-container>
+        <ng-container matColumnDef="canHo">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Căn hộ </th>
+          <td mat-cell *matCellDef="let row"> {{row.canHo.tenCanHo}} </td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+
+        <tr class="mat-row" *matNoDataRow>
+          <td class="mat-cell" colspan="4">Không có dữ liệu: "{{input.value}}"</td>
+        </tr>
+      </table>
+
+      <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
     </div>
-    <mat-card class="example-card" *ngFor="let typePost of typePosts"   >
-      <mat-card-header>
-        <div mat-card-avatar class="example-header-image"></div>
-        <div style="width: 85%; float: left">
-        <mat-card-title>{{typePost.typeName}}</mat-card-title>
-        <mat-card-subtitle>Số bài viết: {{typePost.countPost}}</mat-card-subtitle>
-        </div>
-        <div style="width: 25%">
-        <button mat-mini-fab color="primary" style="margin-left: 85%" [matMenuTriggerFor]="menu" aria-label="Example icon button with a delete icon">
-          <mat-icon>menu</mat-icon>
-        </button>
-        </div>
-      </mat-card-header>
-      <mat-menu #menu="matMenu" >
-        <button routerLink="/admin/manage-post/post/{{typePost.id}}"  mat-menu-item>
-          <mat-icon>auto_stories</mat-icon>
-          <span>Xem các bài viết</span>
-        </button>
-        <button [disabled]="auth === false" (click)="editTypePost(typePost.id)"   mat-menu-item>
-          <mat-icon>edit</mat-icon>
-          <span>Sửa loại bài viết</span>
-        </button>
-        <button [disabled]="auth === false" (click)="deleteType(typePost.id)" mat-menu-item >
-          <mat-icon>delete</mat-icon>
-          <span>Xóa loại bài viết</span>
-        </button>
-      </mat-menu>
-    </mat-card>
   </nb-card-body>
 </nb-card>
