--- a/src/app/admin/manage-post/type-post/type-post.component.scss
+++ b/src/app/admin/manage-post/type-post/type-post.component.scss
@@ -8,3 +8,15 @@
   background-image: url('https://image.flaticon.com/icons/png/512/2875/2875925.png');
   background-size: cover;
 }
+table {
+  width: 100%;
+}
+
+.mat-form-field {
+  font-size: 14px;
+  width: 100%;
+}
+
+td, th {
+  width: 15%;
+}
