--- a/src/app/admin/manage-statistics/statistics-shared/statistics-shared.component.html
+++ b/src/app/admin/manage-statistics/statistics-shared/statistics-shared.component.html
@@ -1,1 +1,140 @@
-<p>statistics-shared works!</p>
+<div class="row" *ngIf="this.role == 'Admin'">
+  <div class="col-lg-6">
+    <nb-card>
+      <nb-card-header>Độ tuổi của cư dân</nb-card-header>
+      <nb-card-body>
+        <ngx-echarts-pie-2></ngx-echarts-pie-2>
+      </nb-card-body>
+    </nb-card>
+  </div>
+  <div class="col-lg-6">
+    <nb-card>
+      <nb-card-header>Sinh nhật trong tháng</nb-card-header>
+      <nb-card-body>
+        <mat-form-field>
+          <mat-label>Tìm kiếm</mat-label>
+          <input matInput (keyup)="applyFilter($event)" placeholder="Nhập mục cần tìm..." #input>
+        </mat-form-field>
+        <table mat-table [dataSource]="data" multiTemplateDataRows class="mat-elevation-z8" matSort>
+          <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef> </th>
+            <td mat-cell *matCellDef="let row">
+              <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+                <mat-icon>more_vert</mat-icon>
+              </button>
+              <mat-menu #menu="matMenu">
+                <button (click)="guiChucMung(row.id)" mat-menu-item>
+                  <mat-icon>details</mat-icon>
+                  <span>Gửi lời chúc</span>
+                </button>
+              </mat-menu>
+            </td>
+          </ng-container>
+          <ng-container matColumnDef="image">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> </th>
+            <td mat-cell *matCellDef="let element"> <img src="{{element.hinhAnh}}" style="width:50px;height:50px;">
+            </td>
+          </ng-container>
+          <ng-container matColumnDef="stt">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Id </th>
+            <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+          </ng-container>
+          <ng-container matColumnDef="fullName">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Họ tên </th>
+            <td mat-cell *matCellDef="let element"> {{element.hoTen}}</td>
+          </ng-container>
+          <ng-container matColumnDef="ngaySinh">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Ngày sinh </th>
+            <td mat-cell *matCellDef="let element"> {{element.ngaySinh | date}} </td>
+          </ng-container>
+          <ng-container matColumnDef="canHo">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Căn hộ </th>
+            <td mat-cell *matCellDef="let element" routerLink="/admin/manage-canho/detail/{{element.id}}">
+              {{element.canHo.tenCanHo}} </td>
+          </ng-container>
+          <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+          <tr mat-row *matRowDef="let element; columns: columnsToDisplay;" class="example-element-row"
+            [class.example-expanded-row]="expandedElement === element"
+            (click)="expandedElement = expandedElement === element ? null : element">
+          </tr>
+          <tr class="mat-row" *matNoDataRow>
+            <td class="mat-cell" colspan="4">Không có dữ liệu: "{{input.value}}"</td>
+          </tr>
+          <!-- <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr> -->
+        </table>
+        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+      </nb-card-body>
+    </nb-card>
+  </div>
+  <div class="col-lg-6">
+    <nb-card>
+      <nb-card-header>Hoá đơn dịch vụ</nb-card-header>
+      <nb-card-body>
+        <mat-form-field appearance="fill" style="width:50%">
+          <mat-label>Month and Year</mat-label>
+          <input matInput [matDatepicker]="dp" [formControl]="date">
+          <mat-datepicker-toggle matSuffix [for]="dp"></mat-datepicker-toggle>
+          <mat-datepicker #dp startView="multi-year" (yearSelected)="chosenYearHandler($event)"
+            (monthSelected)="chosenMonthHandler($event, dp)" panelClass="example-month-picker">
+          </mat-datepicker>
+        </mat-form-field>
+        <br>
+        <ngx-echarts-pie-dichvu [nam]="this.date.value.year()" [thang]="this.date.value.month()">
+        </ngx-echarts-pie-dichvu>
+      </nb-card-body>
+    </nb-card>
+  </div>
+  <div class="col-lg-6">
+    <nb-card>
+      <nb-card-header>Hoá đơn sửa chữa</nb-card-header>
+      <nb-card-body>
+        <mat-form-field appearance="fill" style="width:50%">
+          <mat-label>Month and Year</mat-label>
+          <input matInput [matDatepicker]="dp2" [formControl]="date2">
+          <mat-datepicker-toggle matSuffix [for]="dp2"></mat-datepicker-toggle>
+          <mat-datepicker #dp2 startView="multi-year" (yearSelected)="chosenYearHandler2($event)"
+            (monthSelected)="chosenMonthHandler2($event, dp2)" panelClass="example-month-picker">
+          </mat-datepicker>
+        </mat-form-field>
+        <ngx-echarts-pie-suachua [nam]="this.date2.value.year()" [thang]="this.date2.value.month()">
+        </ngx-echarts-pie-suachua>
+      </nb-card-body>
+    </nb-card>
+  </div>
+</div>
+<div class="row" *ngIf="this.role == 'User'">
+  <div class="col-lg-6">
+    <nb-card>
+      <nb-card-header>Thông báo chung</nb-card-header>
+      <nb-card-body>
+        <nb-accordion>
+          <nb-accordion-item *ngFor="let data of thongBaoChung">
+            <nb-accordion-item-header style="color: #598bff">{{data.tieuDe}}</nb-accordion-item-header>
+            <nb-accordion-item-body>
+              {{data.noiDung}}
+            </nb-accordion-item-body>
+          </nb-accordion-item>
+        </nb-accordion>
+      </nb-card-body>
+    </nb-card>
+  </div>
+  <div class="col-lg-6">
+    <nb-card>
+      <nb-card-header>Thông báo cá nhân</nb-card-header>
+      <nb-card-body>
+        <nb-accordion>
+          <nb-accordion-item *ngFor="let data of thongBaoRieng">
+            <nb-accordion-item-header style="color: #598bff"
+              [ngStyle]="{'background-color': data.trangThai == false ? '#EEEEEE':''}" (click)="daDoc(data)">
+
+              {{data.tieuDe}}
+            </nb-accordion-item-header>
+            <nb-accordion-item-body>
+              {{data.noiDung}}
+            </nb-accordion-item-body>
+          </nb-accordion-item>
+        </nb-accordion>
+      </nb-card-body>
+    </nb-card>
+  </div>
+</div>
