--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -31,7 +31,7 @@
             <a routerLink="/forgot-password" class="">Quên mật khẩu?</a>
           </div>
         </form>
-        <p class="dangky">Bạn chưa có tài khoản? <a routerLink="/register" class="">Đăng Ký</a></p>
+        <p class="dangky">Bạn chưa có tài khoản? <a routerLink="#" class="">Liên hệ với quản trị viên</a></p>
       </div>
     </div>
   </div>
