--- a/src/app/admin/manage-phongban/nhan-vien/nhan-vien.component.html
+++ b/src/app/admin/manage-phongban/nhan-vien/nhan-vien.component.html
@@ -7,7 +7,7 @@
 </nav>
 <nb-card>
   <nb-card-header>
-    Danh sách nhân viên thuộc phòng ban : {{id}}
+    Danh sách nhân viên thuộc bộ phận : {{id}}
   </nb-card-header>
   <nb-card-body>
     <div style="display: flex">
@@ -27,7 +27,7 @@
 
         <ng-container matColumnDef="id">
           <th mat-header-cell *matHeaderCellDef> Mã nhân viên</th>
-          <td mat-cell *matCellDef="let row" (click)="loadOrder(row.bookingResponse.id)" [nbPopover]="card"> {{row.id}}
+          <td mat-cell *matCellDef="let row" (click)="loadOrder(row.id)" [nbPopover]="card"> {{row.id}}
           </td>
         </ng-container>
 
@@ -38,12 +38,16 @@
               <mat-icon>more_vert</mat-icon>
             </button>
             <mat-menu #menu="matMenu">
-              <button routerLink="/admin/manage-phongban/nhanvien-edit/{{row.id}}" mat-menu-item>
+              <!-- <button routerLink="/admin/manage-phongban/nhanvien-edit/{{row.id}}" mat-menu-item>
                 <mat-icon>Detail</mat-icon>
                 <span>Chi tiết</span>
+              </button> -->
+              <button mat-menu-item (click)="openEdit(row)">
+                <mat-icon>edit</mat-icon>
+                <span>Chỉnh sửa</span>
               </button>
-              <button mat-menu-item>
-                <mat-icon>picture_as_pdf</mat-icon>
+              <button mat-menu-item (click)="deleteNhanVien(row)">
+                <mat-icon>delete</mat-icon>
                 <span>Xoá</span>
               </button>
             </mat-menu>
@@ -52,19 +56,19 @@
 
         <ng-container matColumnDef="fullname">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Họ và tên</th>
-          <td mat-cell *matCellDef="let row" (click)="loadOrder(row.bookingResponse.id)" [nbPopover]="card">
-            {{row.hoVaTen}} </td>
+          <td mat-cell *matCellDef="let row" (click)="loadOrder(row.id)" [nbPopover]="card">
+            {{row.hoTen}} </td>
         </ng-container>
 
         <ng-container matColumnDef="dateIn">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Số điện thoại</th>
-          <td mat-cell *matCellDef="let row" (click)="loadOrder(row.bookingResponse.id)" [nbPopover]="card">
+          <td mat-cell *matCellDef="let row" (click)="loadOrder(row.id)" [nbPopover]="card">
             {{row.soDienThoai}} </td>
         </ng-container>
 
         <ng-container matColumnDef="dateOut">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Email</th>
-          <td mat-cell *matCellDef="let row" (click)="loadOrder(row.bookingResponse.id)" [nbPopover]="card">
+          <td mat-cell *matCellDef="let row" (click)="loadOrder(row.id)" [nbPopover]="card">
             {{row.email}} </td>
         </ng-container>
 
