--- a/src/app/admin/manage-phongban/phongBan/phongban.component.html
+++ b/src/app/admin/manage-phongban/phongBan/phongban.component.html
@@ -2,21 +2,17 @@
   <ol class="breadcrumb">
     <mat-icon type="button" aria-hidden="false" routerLink="/admin/" aria-label="Example home icon">home</mat-icon>
     <li class="breadcrumb-item"><a routerLink="/admin/">Trang chủ</a></li>
-    <li class="breadcrumb-item active" aria-current="page">Quản lý phòng ban</li>
+    <li class="breadcrumb-item active" aria-current="page">Quản lý bộ phần</li>
   </ol>
 </nav>
 <nb-card>
   <nb-card-header>
-    Danh sách phòng ban
+    Danh sách bộ phận
   </nb-card-header>
   <nb-card-body>
     <div style="display: flex">
-      <button mat-flat-button (click)="openAdd()" color="primary">Thêm phòng ban</button>
-      <nb-actions size="medium">
-        <nb-action nbPopoverTrigger="hover" [nbPopover]="card" icon="person-outline" [badgeText]="check.length"
-          badgePosition="top right" badgeStatus="warning">
-        </nb-action>
-      </nb-actions>
+      <button mat-flat-button (click)="openAdd()" color="primary">Thêm bộ phận</button>
+
     </div>
     <mat-form-field>
       <mat-label>Tìm kiếm</mat-label>
@@ -26,8 +22,8 @@
       <table mat-table [dataSource]="dataSource" matSort>
 
         <ng-container matColumnDef="id">
-          <th mat-header-cell *matHeaderCellDef> Mã phòng ban</th>
-          <td mat-cell *matCellDef="let row" (click)="loadOrder(row.bookingResponse.id)" [nbPopover]="card"> {{row.id}}
+          <th mat-header-cell *matHeaderCellDef> Mã bộ phận</th>
+          <td mat-cell *matCellDef="let row" (click)="loadOrder(row.id)" [nbPopover]="card"> {{row.id}}
           </td>
         </ng-container>
 
@@ -42,37 +38,25 @@
                 <mat-icon>Detail</mat-icon>
                 <span>Danh sách nhân viên</span>
               </button>
-              <button (click)="generatePdfUrl(row.id)" mat-menu-item>
-                <mat-icon>picture_as_pdf</mat-icon>
+              <button (click)="openEdit(row)" mat-menu-item>
+                <mat-icon>edit</mat-icon>
                 <span>Chỉnh sửa</span>
+              </button>
+              <button (click)="deleteBoPhan(row)" mat-menu-item>
+                <mat-icon>delete</mat-icon>
+                <span>Xoá</span>
               </button>
             </mat-menu>
           </td>
         </ng-container>
 
-        <ng-container matColumnDef="fullname">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Tên phòng ban</th>
-          <td mat-cell *matCellDef="let row" (click)="loadOrder(row.bookingResponse.id)" [nbPopover]="card">
-            {{row.tenPhongBan}} </td>
+        <ng-container matColumnDef="ten">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Tên bộ phận</th>
+          <td mat-cell *matCellDef="let row" (click)="loadOrder(row.id)" [nbPopover]="card">
+            {{row.ten}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="dateIn">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Người phụ trách</th>
-          <td mat-cell *matCellDef="let row" (click)="loadOrder(row.bookingResponse.id)" [nbPopover]="card">
-            {{row.nguoiPhuTrach}} </td>
-        </ng-container>
 
-        <ng-container matColumnDef="dateOut">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Số điện thoại</th>
-          <td mat-cell *matCellDef="let row" (click)="loadOrder(row.bookingResponse.id)" [nbPopover]="card">
-            {{row.soDienThoai}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="dateRelease">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Số nhân viên</th>
-          <td mat-cell *matCellDef="let row" (click)="loadOrder(row.bookingResponse.id)" [nbPopover]="card">
-            {{row.soNhanVien}} </td>
-        </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
